# app/Http/Controllers/ManagementController.php
@@ -1,26 +1,16 @@
 <?php
 
-/**
- * 飲食店向け簡易オーダーシステム
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- * PHP version 7.2.5
- *
- * The version of the OpenAPI document: 1.0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI-Generator
- * https://openapi-generator.tech
- * Do not edit the class manually.
- *
- * Source files are located at:
- *
- * > https://github.com/OpenAPITools/openapi-generator/blob/master/modules/openapi-generator/src/main/resources/php-laravel/
- */
-
-
 namespace App\Http\Controllers;
 
-use Illuminate\Support\Facades\Request;
+use Illuminate\Http\RedirectResponse;
+use Illuminate\Http\Request;
+use \Illuminate\Validation\ValidationException;
+use App\Services\AdminAccountManagementService;
+use App\Services\RelationshipManagementService;
+use App\Services\RestaurantManagementService;
+use App\Services\MenuManagementService;
+use App\Services\DishManagementService;
+use App\Services\OrderManagementService;
 
 class ManagementController extends Controller
 {
@@ -32,115 +22,132 @@ class ManagementController extends Controller
     }
 
     /**
-     * Operation adminList
-     *
-     * 管理者アカウントの一覧取得 (ownerは自分の店舗に所属しているアカウントのみ取得可能).
-     *
-     *
-     * @return Http response
+     * 管理者アカウントの一覧取得 (ownerは自分の店舗に所属しているアカウントのみ取得可能)
+     * @return \Illuminate\Http\JSONResponse
      */
     public function adminList()
     {
-        $input = Request::all();
+        // TODO: Autherizationヘッダーを使って管理者ロールを取得 (403エラーを返す)
 
-        //path params validation
+        $admins = AdminAccountManagementService::getAdminList();
 
-
-        //not path params validation
-        if (!isset($input['authorization'])) {
-            throw new \InvalidArgumentException('Missing the required parameter $authorization when calling adminList');
-        }
-        $authorization = $input['authorization'];
-
-
-        return response('How about implementing adminList as a get method ?');
+        return response()->json($admins, 200);
     }
+
     /**
-     * Operation adminSignUp
-     *
-     * 新規管理者アカウント(owner, counter, kitchen)発行.
-     *
-     *
-     * @return Http response
+     * 新規管理者アカウント(owner, counter, kitchen)発行
+     * @return \Illuminate\Http\JSONResponse
      */
-    public function adminSignUp()
+    public function adminSignUp(Request $request)
     {
-        $input = Request::all();
-
-        //path params validation
-
-
-        //not path params validation
-        if (!isset($input['authorization'])) {
-            throw new \InvalidArgumentException('Missing the required parameter $authorization when calling adminSignUp');
+        // リクエストボディのバリデーション (400エラーを返す)
+        try {
+            $request->validate([
+                'admin_name' => 'required|string',
+                'login_id' => 'required|string|unique:admins,login_id',
+                'password' => 'required|string',
+                'admin_role' => 'required|string',
+                'restaurant_id' => 'array',
+                'restaurant_id.*' => 'integer',
+            ]);
+        } catch (ValidationException $e) {
+            return response()->json(['error' => 'リクエストの形式または内容に誤りがある'], 400);
         }
-        $authorization = $input['authorization'];
 
-        $adminSignUpRequest = $input['adminSignUpRequest'];
+        $adminInfo = json_decode($request->getContent(), true);
 
+        // TODO: 店舗が存在するかをチェック (存在しない場合は、400エラーを返す)
 
-        return response('How about implementing adminSignUp as a post method ?');
+        // TODO: Autherizationヘッダーを使って管理者ロールを取得、発行可否を判定 (403エラーを返す)
+
+        $adminId = AdminAccountManagementService::createAdmin($adminInfo);
+
+        return response()->json(['admin_id' => $adminId], 200);
     }
+
+
     /**
-     * Operation adminDelete
-     *
-     * 管理者アカウント(owner, counter, kitchen)削除.
-     *
+     * 管理者アカウント(owner, counter, kitchen)削除
      * @param int $adminId 削除したい管理者アカウントのID (required)
-     *
-     * @return Http response
+     * @return \Illuminate\Http\JSONResponse
      */
     public function adminDelete($adminId)
     {
-        $input = Request::all();
+        // 指定した管理者存在するかをチェック (存在しない場合は、400エラーを返す)
+        if (!AdminAccountManagementService::isExist($adminId)) {
+            return response()->json(['error' => '指定した管理者は存在しません'], 400);
+        }
 
-        //path params validation
+        // TODO: Autherizationヘッダーを使って管理者ロールを取得、削除可否を判定 (403エラーを返す)
 
-
-        //not path params validation
-
-        return response('How about implementing adminDelete as a delete method ?');
+        // 管理者アカウントを削除 (削除に失敗した場合は、500エラーを返す)
+        if (AdminAccountManagementService::deleteAdmin($adminId)) {
+            return response()->json(['message' => '管理者アカウントを削除しました'], 200);
+        } else {
+            return response()->json(['error' => '管理者アカウントの削除に失敗しました'], 500);
+        }
     }
+
     /**
-     * Operation adminGet
-     *
-     * 管理者アカウント情報取得.
-     *
+     * 管理者アカウント情報取得
      * @param int $adminId 情報取得したい管理者アカウントのID (required)
-     *
-     * @return Http response
+     * @return \Illuminate\Http\JSONResponse
      */
     public function adminGet($adminId)
     {
-        $input = Request::all();
+        // 指定した管理者存在するかをチェック (存在しない場合は、400エラーを返す)
+        if (!AdminAccountManagementService::isExist($adminId)) {
+            return response()->json(['error' => '指定した管理者は存在しません'], 400);
+        }
 
-        //path params validation
+        // TODO: Autherizationヘッダーを使って管理者ロールを取得、取得可否を判定 (403エラーを返す)
 
-
-        //not path params validation
-
-        return response('How about implementing adminGet as a get method ?');
+        // 管理者アカウントを取得 (取得に失敗した場合は、500エラーを返す)
+        $admin = AdminAccountManagementService::getAdminInfo($adminId);
+        if ($admin) {
+            return response()->json($admin, 200);
+        } else {
+            return response()->json(['error' => '管理者アカウントの取得に失敗しました'], 500);
+        }
     }
+
     /**
-     * Operation adminModify
-     *
      * 管理者アカウント(owner, counter, kitchen)情報編集.
-     *
      * @param int $adminId 編集したい管理者アカウントのID (required)
-     *
-     * @return Http response
+     * @return \Illuminate\Http\JSONResponse
      */
-    public function adminModify($adminId)
+    public function adminModify(Request $request, string $adminId)
     {
-        $input = Request::all();
+        // リクエストボディのバリデーション (400エラーを返す)
+        try {
+            $request->validate([
+                'admin_name' => 'string',
+                'login_id' => 'string|unique:admins,login_id',
+                'password' => 'string',
+                'restaurant_id' => 'array',
+                'restaurant_id.*' => 'integer',
+            ]);
+        } catch (ValidationException $e) {
+            return response()->json(['error' => 'リクエストの形式または内容に誤りがある'], 400);
+        }
 
-        //path params validation
+        $adminInfo = json_decode($request->getContent(), true);
 
+        // 指定した管理者存在するかをチェック (存在しない場合は、400エラーを返す)
+        if (!AdminAccountManagementService::isExist($adminId)) {
+            return response()->json(['error' => '指定した管理者は存在しません'], 400);
+        }
 
-        //not path params validation
+        // TODO: Autherizationヘッダーを使って管理者ロールを取得、編集可否を判定 (403エラーを返す)
 
-        return response('How about implementing adminModify as a put method ?');
+        // 管理者アカウントを編集 (編集に失敗した場合は、500エラーを返す)
+        if (AdminAccountManagementService::editAdmin($adminId, $adminInfo)) {
+            return response()->json(['message' => '管理者アカウントを編集しました'], 200);
+        } else {
+            return response()->json(['error' => '管理者アカウントの編集に失敗しました'], 500);
+        }
     }
+
     /**
      * Operation menuCreate
      *
@@ -152,7 +159,7 @@ class ManagementController extends Controller
      */
     public function menuCreate($restaurantId)
     {
-        $input = Request::all();
+        //  $input = Request::all();
 
         //path params validation
 
@@ -172,7 +179,7 @@ class ManagementController extends Controller
      */
     public function menuList($restaurantId)
     {
-        $input = Request::all();
+        //  $input = Request::all();
 
         //path params validation
 
@@ -192,7 +199,7 @@ class ManagementController extends Controller
      */
     public function dishDelete($dishId)
     {
-        $input = Request::all();
+        //  $input = Request::all();
 
         //path params validation
 
@@ -212,7 +219,7 @@ class ManagementController extends Controller
      */
     public function dishGet($dishId)
     {
-        $input = Request::all();
+        //  $input = Request::all();
 
         //path params validation
 
@@ -232,7 +239,7 @@ class ManagementController extends Controller
      */
     public function dishModify($dishId)
     {
-        $input = Request::all();
+        //  $input = Request::all();
 
         //path params validation
 
@@ -251,13 +258,13 @@ class ManagementController extends Controller
      */
     public function adminLogin()
     {
-        $input = Request::all();
+        //  $input = Request::all();
 
         //path params validation
 
 
         //not path params validation
-        $adminLoginRequest = $input['adminLoginRequest'];
+        // $adminLoginRequest = $input['adminLoginRequest'];
 
 
         return response('How about implementing adminLogin as a post method ?');
@@ -273,7 +280,7 @@ class ManagementController extends Controller
      */
     public function orderedDishCancel($orderedDishId)
     {
-        $input = Request::all();
+        //  $input = Request::all();
 
         //path params validation
 
@@ -293,7 +300,7 @@ class ManagementController extends Controller
      */
     public function orderedDishDelivery($orderedDishId)
     {
-        $input = Request::all();
+        //  $input = Request::all();
 
         //path params validation
 
@@ -313,7 +320,7 @@ class ManagementController extends Controller
      */
     public function orderList($restaurantId)
     {
-        $input = Request::all();
+        //  $input = Request::all();
 
         //path params validation
 
@@ -333,7 +340,7 @@ class ManagementController extends Controller
      */
     public function unservedDishList($restaurantId)
     {
-        $input = Request::all();
+        //  $input = Request::all();
 
         //path params validation
 
@@ -353,7 +360,7 @@ class ManagementController extends Controller
      */
     public function orderGet($orderId)
     {
-        $input = Request::all();
+        //  $input = Request::all();
 
         //path params validation
 
@@ -373,7 +380,7 @@ class ManagementController extends Controller
      */
     public function orderPut($orderId)
     {
-        $input = Request::all();
+        //  $input = Request::all();
 
         //path params validation
 
@@ -392,7 +399,7 @@ class ManagementController extends Controller
      */
     public function restaurantList()
     {
-        $input = Request::all();
+        //  $input = Request::all();
 
         //path params validation
 
@@ -401,7 +408,7 @@ class ManagementController extends Controller
         if (!isset($input['authorization'])) {
             throw new \InvalidArgumentException('Missing the required parameter $authorization when calling restaurantList');
         }
-        $authorization = $input['authorization'];
+        // $authorization = $input['authorization'];
 
 
         return response('How about implementing restaurantList as a get method ?');
@@ -416,7 +423,7 @@ class ManagementController extends Controller
      */
     public function restaurantSignUp()
     {
-        $input = Request::all();
+        //  $input = Request::all();
 
         //path params validation
 
@@ -425,9 +432,9 @@ class ManagementController extends Controller
         if (!isset($input['authorization'])) {
             throw new \InvalidArgumentException('Missing the required parameter $authorization when calling restaurantSignUp');
         }
-        $authorization = $input['authorization'];
+        // $authorization = $input['authorization'];
 
-        $restaurantSignUpRequest = $input['restaurantSignUpRequest'];
+        // $restaurantSignUpRequest = $input['restaurantSignUpRequest'];
 
 
         return response('How about implementing restaurantSignUp as a post method ?');
@@ -443,7 +450,7 @@ class ManagementController extends Controller
      */
     public function restaurantDelete($restaurantId)
     {
-        $input = Request::all();
+        //  $input = Request::all();
 
         //path params validation
 
@@ -463,7 +470,7 @@ class ManagementController extends Controller
      */
     public function restaurantGet($restaurantId)
     {
-        $input = Request::all();
+        //  $input = Request::all();
 
         //path params validation
 
@@ -483,7 +490,7 @@ class ManagementController extends Controller
      */
     public function restaurantModify($restaurantId)
     {
-        $input = Request::all();
+        //  $input = Request::all();
 
         //path params validation
 
@@ -503,7 +510,7 @@ class ManagementController extends Controller
      */
     public function seatAdd($restaurantId)
     {
-        $input = Request::all();
+        //  $input = Request::all();
 
         //path params validation
 
@@ -523,7 +530,7 @@ class ManagementController extends Controller
      */
     public function seatList($restaurantId)
     {
-        $input = Request::all();
+        //  $input = Request::all();
 
         //path params validation
 
@@ -543,7 +550,7 @@ class ManagementController extends Controller
      */
     public function seatDelete($seatId)
     {
-        $input = Request::all();
+        //  $input = Request::all();
 
         //path params validation
 
@@ -563,7 +570,7 @@ class ManagementController extends Controller
      */
     public function seatEdit($seatId)
     {
-        $input = Request::all();
+        //  $input = Request::all();
 
         //path params validation
 
@@ -583,7 +590,7 @@ class ManagementController extends Controller
      */
     public function seatInfo($seatId)
     {
-        $input = Request::all();
+        //  $input = Request::all();
 
         //path params validation
 
@@ -603,7 +610,7 @@ class ManagementController extends Controller
      */
     public function seatRefresh($seatId)
     {
-        $input = Request::all();
+        //  $input = Request::all();
 
         //path params validation
 
